<resources>
    <string name="app_name">Trashcend</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>

    <!-- TRASH RESULT -->
    <string name="result_type_label">Type:</string>
    <string name="result_trash_label">Trash Bin:</string>
    <string name="result_description_label">Description:</string>

    <!-- TRASH TYPE -->
    <string name="trash_type_organic">Organic</string>
    <string name="trash_type_food">Food</string>
    <string name="trash_type_plastic">Plastic</string>
    <string name="trash_type_paper">Paper</string>
    <string name="trash_type_glass">Glass</string>

    <!-- TRASH BIN COLOR -->
    <string name="trash_color_blue">Blue</string>
    <string name="trash_color_grey">Grey</string>
    <string name="trash_color_yellow">Yellow</string>
    <string name="trash_color_brown">Brown</string>
    <string name="trash_description_plastic">Plastic bottles and containers and aluminum and steel cans belong to the yellow bin.</string>
    <string name="trash_description_glass">Glass bottles should be disposed in the green container.</string>
    <string name="trash_description_organic">Organics belong to the brown bin.</string>
    <string name="trash_color_green">Green</string>


</resources>
