<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">


    <TextView
        android:id="@+id/result_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_label_size"
        android:text="@string/result_type_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/result_label"
        />

    <TextView
        android:id="@+id/result_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_text_size"
        android:text="@string/trash_type_plastic"
        app:layout_constraintTop_toBottomOf="@id/result_type_label"
        app:layout_constraintStart_toStartOf="@id/result_type_label"
        android:textColor="@color/result_text"
        android:textAllCaps="true"
        android:textStyle="bold"
        tools:text="@string/trash_type_plastic"
        />

    <TextView
        android:id="@+id/result_trash_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_label_size"
        android:layout_marginTop="16dp"
        android:text="@string/result_trash_label"
        app:layout_constraintTop_toBottomOf="@id/result_type"
        app:layout_constraintStart_toStartOf="@id/result_type_label"
        android:textColor="@color/result_label"
        />

    <TextView
        android:id="@+id/result_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_text_size"
        android:text="@string/trash_color_yellow"
        app:layout_constraintTop_toBottomOf="@id/result_trash_label"
        app:layout_constraintStart_toStartOf="@id/result_type_label"
        android:textColor="@color/result_text"
        android:textAllCaps="true"
        android:textStyle="bold"
        tools:text="@string/trash_color_yellow"
        />

    <TextView
        android:id="@+id/result_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_label_size"
        android:text="@string/result_description_label"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/result_trash"
        app:layout_constraintStart_toStartOf="@id/result_type_label"
        android:textColor="@color/result_label"
        />

    <TextView
        android:id="@+id/result_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_text_size"
        android:text="@string/trash_description_plastic"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/result_description_label"
        app:layout_constraintStart_toStartOf="@id/result_type_label"
        android:textColor="@color/result_text"
        android:textAllCaps="true"
        android:textStyle="bold"
        tools:text="@string/trash_description_plastic"
        />

</android.support.constraint.ConstraintLayout>